--- a/src/css/holzschmiede.css
+++ b/src/css/holzschmiede.css
@@ -164,10 +164,12 @@ main p a:hover {
     border-width: 2px !important;
     text-transform: uppercase;
     background-color: #e09402 !important;
+    box-shadow: 0px 2px 2px rgba(10,10,10,0.1), 0px 2px 4px rgba(10,10,10,0.1), 0px 0px 2px rgba(10,10,10,0.8);
 }
 
 .contact-button {
     margin: 1.563rem 0 1.875rem 0;
+    box-shadow: 0px 2px 2px rgba(10,10,10,0.1), 0px 2px 4px rgba(10,10,10,0.1), 0px 0px 2px rgba(10,10,10,0.8);
 }
 
 .push-down {
